fix: overflow-x

--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
-    margin: 0 auto
+    margin: 0 auto;
+    overflow-x: hidden;
 }
 * {
     box-sizing: border-box;
